--- a/src/main/resources/fxml/comparisonScreens/SelectTablesScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/SelectTablesScreen.fxml
@@ -1,54 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="main-container" stylesheets="@css/Main.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.SelectTablesScreenController">
-
+<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-container" stylesheets="@css/Main.css, @css/SelectTablesScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.SelectTablesScreenController">
     <children>
 
         <!-- Title text -->
-        <Text layoutX="208.0" layoutY="60.0" styleClass="title-text" text="selecione as tabelas a serem comparadas">
+        <Text layoutX="207.0" layoutY="58.0" styleClass="title-text" text="selecione as tabelas a serem comparadas">
             <font>
                 <Font size="30.0" />
             </font>
         </Text>
 
-        <!-- First TableView -->
-        <TableView fx:id="allTablesTableView" layoutX="48.0" layoutY="142.0" prefHeight="340.0" prefWidth="664.0" style="-fx-pref-width: 590; -fx-pref-height: 365; -fx-background-color: #F0F3FA;">
-         <columns>
-             <TableColumn fx:id="tableNameTableColumn" prefWidth="298.0" text="nome da tabela" />
-             <TableColumn fx:id="baseATableColumn" prefWidth="142.0" text="baseA" />
-             <TableColumn fx:id="baseBTableColumn" prefWidth="147.0" text="baseB" />
-             <TableColumn fx:id="selectColumn">
-               <graphic>
-                  <CheckBox fx:id="selectAllVisibleCheckBox" mnemonicParsing="false" />
-               </graphic></TableColumn>
-         </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy></TableView>
-
-        <!-- Second TableView -->
-        <TableView fx:id="selectedTablesTableView" layoutX="706.0" layoutY="142.0" prefHeight="340.0" prefWidth="200.0" style="-fx-background-color: #F0F3FA; -fx-pref-height: 365;">
-            <columns>
-                <TableColumn prefWidth="199.0" text="nome da tabela" />
-            </columns>
-            <columnResizePolicy>
-                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-            </columnResizePolicy>
-        </TableView>
-
-        <Button fx:id="nextButton" layoutX="783.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#nextStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-primary" text="AVANÇAR" />
-        <Button fx:id="previousButton" layoutX="651.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#previousStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-secondary-outline" text="VOLTAR" />
-        <Text fx:id="cancelText" layoutX="570.0" layoutY="560.0" onMouseClicked="#cancelComparison" styleClass="cancel-text" text="CANCELAR" />
-      <TextField fx:id="filterAllTablesTextField" layoutX="48.0" layoutY="113.0" prefHeight="25.0" prefWidth="299.0" />
-      <CheckBox fx:id="onlyDifferentCountsCheckBox" layoutX="48.0" layoutY="518.0" mnemonicParsing="false" text="Mostrar apenas tabelas com número de registros diferentes" />
+        <VBox alignment="TOP_CENTER" layoutX="-1.0" layoutY="126.0" prefHeight="401.0" prefWidth="703.0" spacing="10.0" AnchorPane.bottomAnchor="73.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="258.0" AnchorPane.topAnchor="126.0">
+            <padding>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </padding>
+            <children>
+                <ScrollPane fx:id="scrollPane" fitToWidth="true" prefHeight="361.0" prefWidth="695.0" VBox.vgrow="ALWAYS"> <content>
+                    <Accordion fx:id="tablesAccordion" /> </content>
+                </ScrollPane>
+            </children>
+        </VBox>
+        <Button fx:id="nextStepBtn" layoutX="783.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#nextStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-primary" text="AVANÇAR" />
+        <Button fx:id="previousStepBtn" layoutX="651.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#previousStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-secondary" text="VOLTAR" />
+        <Text fx:id="cancelBtn" layoutX="570.0" layoutY="560.0" onMouseClicked="#cancelComparison" styleClass="cancel-text" text="CANCELAR" />
     </children>
 </AnchorPane>
