--- a/src/main/resources/fxml/comparisonScreens/SelectTablesScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/SelectTablesScreen.fxml
@@ -3,8 +3,14 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -19,13 +25,47 @@
             </font>
         </Text>
 
-        <VBox alignment="TOP_CENTER" layoutX="-1.0" layoutY="126.0" prefHeight="401.0" prefWidth="703.0" spacing="10.0" AnchorPane.bottomAnchor="73.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="258.0" AnchorPane.topAnchor="126.0">
+        <VBox alignment="TOP_CENTER" layoutX="-1.0" layoutY="89.0" prefHeight="438.0" prefWidth="960.0" spacing="10.0" AnchorPane.bottomAnchor="73.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="89.0">
             <padding>
                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
             </padding>
+
             <children>
-                <ScrollPane fx:id="scrollPane" fitToWidth="true" prefHeight="361.0" prefWidth="695.0" VBox.vgrow="ALWAYS"> <content>
-                    <Accordion fx:id="tablesAccordion" /> </content>
+                <!-- Header Background Container -->
+                <VBox spacing="5.0" styleClass="table-header-container">
+                    <padding>
+                        <Insets bottom="5" left="5" right="5" top="5" />
+                    </padding>
+                    <children>
+                        <HBox alignment="CENTER_LEFT" spacing="10.0">
+                            <children>
+                                <CheckBox fx:id="selectAllCheckBox" prefHeight="35.0" prefWidth="24.0" />
+
+                                <Pane HBox.hgrow="ALWAYS" />
+      
+                                <ComboBox fx:id="filterTypeComboBox" prefHeight="20.0" prefWidth="144.0" />
+      
+                                <TextField fx:id="searchTextField" prefWidth="200.0" promptText="buscar tabela..." />
+
+                                <ToggleButton fx:id="filterToggleButton" onMouseClicked="#onFilterButtonClicked" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" />
+
+                            </children>
+                        </HBox>
+                    </children>
+                </VBox>
+                <HBox fx:id="filtersHBox" prefHeight="59.0" prefWidth="663.0" spacing="10.0" visible="false" managed="false">
+                    <children>
+                          <CheckBox fx:id="showDiffRecordCountOnlyCheckBox" prefHeight="19.0" prefWidth="400.0" text="Apenas tabelas com número de registros diferentes entre as fontes" />
+                          <CheckBox fx:id="showInAllSourcesOnlyCheckBox" prefHeight="19.0" prefWidth="299.0" text="Apenas tabelas existentes em todas as fontes" />
+                          <CheckBox fx:id="showSelectedOnlyCheckBox" prefHeight="19.0" prefWidth="196.0" text="Apenas tabelas selecionadas" />
+                    </children>
+                </HBox>
+
+                <!-- ScrollPane with Accordion -->
+                <ScrollPane fx:id="scrollPane" fitToWidth="true" prefHeight="361.0" prefWidth="695.0" VBox.vgrow="ALWAYS">
+                    <content>
+                        <Accordion fx:id="tablesAccordion" />
+                    </content>
                 </ScrollPane>
             </children>
         </VBox>
