--- a/src/main/resources/fxml/comparisonScreens/AttachSourcesScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/AttachSourcesScreen.fxml
@@ -8,7 +8,7 @@
 
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Label?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="main-container" stylesheets="@css/Main.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.AttachSourcesScreenController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="main-container" stylesheets="@css/Main.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.AttachSourcesScreenController">
 
     <children>
 
