--- a/src/main/resources/fxml/comparisonScreens/ColumnSettingsScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/ColumnSettingsScreen.fxml
@@ -15,11 +15,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-container" stylesheets="@css/Main.css, @css/SelectTablesScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.ColumnSettingsScreenController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-container" stylesheets="@css/Main.css, @css/SelectTablesScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.ColumnSettingsScreenController">
     <children>
 
         <!-- Title text -->
-        <Text layoutX="262.0" layoutY="57.0" styleClass="title-text" text="customize as colunas das tabelas">
+        <Text layoutX="265.0" layoutY="55.0" styleClass="title-text" text="configure as colunas das tabelas">
             <font>
                 <Font size="30.0" />
             </font>
@@ -39,9 +39,9 @@
                     <children>
                         <HBox alignment="CENTER_LEFT" spacing="10.0">
                             <children>
-                        <Button mnemonicParsing="false" text="Padrão do sistema" onAction="#onResetSettingsToOriginalForAllTablesButtonClicked"/>
-                        <Button mnemonicParsing="false" text="Padrão" onAction="#onResetSettingsToDefaultForAllTablesButtonClicked"/>
-                        <Button mnemonicParsing="false" text="Salvar Alterados" onAction="#onSaveSettingsForAllAlteredTablesButtonClicked"/>
+                        <Button mnemonicParsing="false" onAction="#onResetSettingsToOriginalForAllTablesButtonClicked" text="Padrão do sistema" />
+                        <Button mnemonicParsing="false" onAction="#onResetSettingsToDefaultForAllTablesButtonClicked" text="Padrão" />
+                        <Button mnemonicParsing="false" onAction="#onSaveSettingsForAllAlteredTablesButtonClicked" text="Salvar Alterados" />
 
                                 <Pane HBox.hgrow="ALWAYS" />
 
@@ -57,9 +57,9 @@
                 </VBox>
                 <HBox fx:id="filtersHBox" managed="false" prefHeight="59.0" prefWidth="663.0" spacing="10.0" visible="false">
                     <children>
-                        <CheckBox fx:id="showDiffRecordCountOnlyCheckBox" prefHeight="19.0" prefWidth="400.0" text="Apenas tabelas com número de registros diferentes entre as fontes" />
-                        <CheckBox fx:id="showInAllSourcesOnlyCheckBox" prefHeight="19.0" prefWidth="299.0" text="Apenas tabelas existentes em todas as fontes" />
-                        <CheckBox fx:id="showSelectedOnlyCheckBox" prefHeight="19.0" prefWidth="196.0" text="Apenas tabelas selecionadas" />
+                        <CheckBox fx:id="showOnlySchemaDiffersCheckBox" prefHeight="19.0" prefWidth="400.0" text="Apenas tabelas com diferenças nos schemas" />
+                        <CheckBox fx:id="showOnlyInvalidColumnSettingsCheckBox" prefHeight="19.0" prefWidth="299.0" text="Apenas tabelas com configurações não validadas" />
+                        <CheckBox fx:id="showOnlyAlteredCheckBox" prefHeight="19.0" prefWidth="196.0" text="Apenas tabelas alteradas" />
                     </children>
                 </HBox>
 
