--- a/src/main/resources/fxml/comparisonScreens/LoadingScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/LoadingScreen.fxml
@@ -10,7 +10,7 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0"
             styleClass="main-container" stylesheets="@css/Main.css"
             xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.luksosilva.dbcomparator.controller.LoadingScreenController">
+            fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.LoadingScreenController">
     <children>
         <VBox alignment="CENTER" spacing="20.0"
               AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0"
