--- a/src/main/resources/fxml/comparisonScreens/SelectTablesScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/SelectTablesScreen.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-container" stylesheets="@css/Main.css, @css/SelectTablesScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.SelectTablesScreenController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-container" stylesheets="@css/Main.css, @css/SelectTablesScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.SelectTablesScreenController">
     <children>
 
         <!-- Title text -->
