--- a/src/main/resources/fxml/comparisonScreens/SelectTablesScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/SelectTablesScreen.fxml
@@ -56,7 +56,7 @@
                 <HBox fx:id="filtersHBox" prefHeight="59.0" prefWidth="663.0" spacing="10.0" visible="false" managed="false">
                     <children>
                           <CheckBox fx:id="showDiffRecordCountOnlyCheckBox" prefHeight="19.0" prefWidth="400.0" text="Apenas tabelas com número de registros diferentes entre as fontes" />
-                          <CheckBox fx:id="showInAllSourcesOnlyCheckBox" prefHeight="19.0" prefWidth="299.0" text="Apenas tabelas existentes em todas as fontes" />
+                          <CheckBox fx:id="showOnlySchemaDiffersCheckBox" prefHeight="19.0" prefWidth="299.0" text="Apenas tabelas com diferenças nos schemas" />
                           <CheckBox fx:id="showSelectedOnlyCheckBox" prefHeight="19.0" prefWidth="196.0" text="Apenas tabelas selecionadas" />
                     </children>
                 </HBox>
