--- a/src/main/resources/fxml/comparisonScreens/AttachSourcesScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/AttachSourcesScreen.fxml
@@ -8,44 +8,84 @@
 
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Label?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="main-container" stylesheets="@css/Main.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.AttachSourcesScreenController">
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.geometry.Insets?>
+<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-container" stylesheets="@css/Main.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.AttachSourcesScreenController">
 
     <children>
 
         <!-- Title text -->
-        <Text layoutX="229.0" layoutY="60.0" styleClass="title-text" text="selecione os bancos para comparação">
-            <font>
-                <Font size="30.0" />
-            </font>
-        </Text>
-
-        <!-- Left drop box -->
-        <Pane fx:id="attachSourceA" layoutX="60.0" layoutY="110.0" onMouseClicked="#attachSource" prefHeight="380.0" prefWidth="400.0" styleClass="empty-drop-box" stylesheets="@css/AttachSourcesScreen.css" AnchorPane.leftAnchor="65.0">
+        <HBox alignment="CENTER" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="23.0">
             <children>
-                <VBox alignment="CENTER" layoutX="0.0" layoutY="250.0" prefHeight="100.0" prefWidth="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                    <children>
-                        <Label fx:id="sourceIdLabelA"  text="sourceId" styleClass="source-id-label" textAlignment="CENTER" visible="false" />
-                        <Label fx:id="sourcePathLabelA" text="sourcePath" styleClass="source-path-label" textAlignment="CENTER" visible="false" />
-                    </children>
-                </VBox>
+                <Region HBox.hgrow="ALWAYS" />
+                <Text text="selecione os bancos para comparação" styleClass="title-text">
+                    <font>
+                        <Font size="30.0" />
+                    </font>
+                </Text>
+                <Region HBox.hgrow="ALWAYS" />
             </children>
-        </Pane>
+        </HBox>
 
-        <!-- Right drop box -->
-        <Pane fx:id="attachSourceB" layoutX="498.0" layoutY="110.0" onMouseClicked="#attachSource" prefHeight="380.0" prefWidth="400.0" styleClass="empty-drop-box" stylesheets="@css/AttachSourcesScreen.css" AnchorPane.rightAnchor="65.0">
+
+        <HBox spacing="20.0" alignment="CENTER"
+              AnchorPane.leftAnchor="65.0" AnchorPane.rightAnchor="65.0"
+              AnchorPane.topAnchor="110.0" AnchorPane.bottomAnchor="100.0">
+
             <children>
-                <VBox alignment="CENTER" layoutX="0.0" layoutY="250.0" prefHeight="100.0" prefWidth="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                <AnchorPane fx:id="attachSourceA" onMouseClicked="#attachSource"
+                            styleClass="empty-drop-box"
+                            stylesheets="@css/AttachSourcesScreen.css"
+                            HBox.hgrow="ALWAYS"
+                            minWidth="0" prefWidth="200" maxWidth="Infinity"
+                            minHeight="0" prefHeight="200" maxHeight="Infinity">
                     <children>
-                        <Label fx:id="sourceIdLabelB" text="sourceId" styleClass="source-id-label" textAlignment="CENTER" visible="false" />
-                        <Label fx:id="sourcePathLabelB" text="sourcePath" styleClass="source-path-label" textAlignment="CENTER" visible="false" />
+                        <VBox alignment="BOTTOM_CENTER" spacing="10.0"
+                              AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0"
+                              AnchorPane.rightAnchor="5.0">
+                            <children>
+                                <Label fx:id="sourceIdLabelA" text="sourceId"
+                                       styleClass="source-id-label"
+                                       textAlignment="CENTER" maxWidth="Infinity"
+                                       visible="false"/>
+                                <Label fx:id="sourcePathLabelA" text="sourcePath"
+                                       styleClass="source-path-label"
+                                       textAlignment="CENTER" maxWidth="Infinity"
+                                       visible="false"/>
+                            </children>
+                        </VBox>
                     </children>
-                </VBox>
+                </AnchorPane>
+
+                <AnchorPane fx:id="attachSourceB" onMouseClicked="#attachSource"
+                            styleClass="empty-drop-box"
+                            stylesheets="@css/AttachSourcesScreen.css"
+                            HBox.hgrow="ALWAYS"
+                            minWidth="0" prefWidth="200" maxWidth="Infinity"
+                            minHeight="0" prefHeight="200" maxHeight="Infinity">
+                    <children>
+                        <VBox alignment="BOTTOM_CENTER" spacing="10.0"
+                              AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0"
+                              AnchorPane.rightAnchor="5.0">
+                            <children>
+                                <Label fx:id="sourceIdLabelB" text="sourceId"
+                                       styleClass="source-id-label"
+                                       textAlignment="CENTER" maxWidth="Infinity"
+                                       visible="false"/>
+                                <Label fx:id="sourcePathLabelB" text="sourcePath"
+                                       styleClass="source-path-label"
+                                       textAlignment="CENTER" maxWidth="Infinity"
+                                       visible="false"/>
+                            </children>
+                        </VBox>
+                    </children>
+                </AnchorPane>
             </children>
-        </Pane>
+        </HBox>
 
-
-        <Button fx:id="nextStepBtn" layoutX="783.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#nextStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-primary" text="AVANÇAR" />
-        <Button fx:id="previousStepBtn" layoutX="651.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#previousStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-secondary" text="VOLTAR" />
-        <Text fx:id="cancelBtn" layoutX="570.0" layoutY="560.0" onMouseClicked="#cancelComparison" styleClass="cancel-text" text="CANCELAR" />
+        <Button fx:id="nextStepBtn" layoutX="783.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#nextStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-primary" text="AVANÇAR" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="22.0" />
+        <Button fx:id="previousStepBtn" layoutX="651.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#previousStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-secondary" text="VOLTAR" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="199.0" />
+        <Text fx:id="cancelBtn" layoutX="570.0" layoutY="560.0" onMouseClicked="#cancelComparison" styleClass="cancel-text" text="CANCELAR" AnchorPane.bottomAnchor="37.0" AnchorPane.rightAnchor="328.0" />
     </children>
 </AnchorPane>
