--- a/src/main/resources/fxml/comparisonScreens/ColumnSettingsScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/ColumnSettingsScreen.fxml
@@ -15,15 +15,22 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.layout.Region?>
 <AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-container" stylesheets="@css/Main.css, @css/SelectTablesScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.ColumnSettingsScreenController">
     <children>
 
         <!-- Title text -->
-        <Text layoutX="265.0" layoutY="55.0" styleClass="title-text" text="configure as colunas das tabelas">
-            <font>
-                <Font size="30.0" />
-            </font>
-        </Text>
+        <HBox alignment="CENTER" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="23.0">
+            <children>
+                <Region HBox.hgrow="ALWAYS" />
+                <Text text="configure as colunas das tabelas selecionadas" styleClass="title-text">
+                    <font>
+                        <Font size="30.0" />
+                    </font>
+                </Text>
+                <Region HBox.hgrow="ALWAYS" />
+            </children>
+        </HBox>
 
         <VBox alignment="TOP_CENTER" layoutX="-1.0" layoutY="89.0" prefHeight="438.0" prefWidth="960.0" spacing="10.0" AnchorPane.bottomAnchor="73.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="89.0">
             <padding>
@@ -55,11 +62,11 @@
                         </HBox>
                     </children>
                 </VBox>
-                <HBox fx:id="filtersHBox" managed="false" prefHeight="59.0" prefWidth="663.0" spacing="10.0" visible="false">
+                <HBox fx:id="filtersHBox" managed="false" spacing="10.0" visible="false">
                     <children>
-                        <CheckBox fx:id="showOnlySchemaDiffersCheckBox" prefHeight="19.0" prefWidth="400.0" text="Apenas tabelas com diferenças nos schemas" />
-                        <CheckBox fx:id="showOnlyInvalidColumnSettingsCheckBox" prefHeight="19.0" prefWidth="299.0" text="Apenas tabelas com configurações não validadas" />
-                        <CheckBox fx:id="showOnlyAlteredCheckBox" prefHeight="19.0" prefWidth="196.0" text="Apenas tabelas alteradas" />
+                        <CheckBox fx:id="showOnlySchemaDiffersCheckBox" prefHeight="19.0" text="Apenas com diferenças nos schemas" />
+                        <CheckBox fx:id="showOnlyInvalidColumnSettingsCheckBox" prefHeight="19.0" text="Apenas com configurações inválidas" />
+                        <CheckBox fx:id="showOnlyAlteredCheckBox" prefHeight="19.0" text="Apenas alteradas" />
                     </children>
                 </HBox>
 
@@ -71,8 +78,8 @@
                 </ScrollPane>
             </children>
         </VBox>
-        <Button fx:id="nextStepBtn" layoutX="783.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#nextStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-primary" text="AVANÇAR" />
-        <Button fx:id="previousStepBtn" layoutX="651.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#previousStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-secondary" text="VOLTAR" />
-        <Text fx:id="cancelBtn" layoutX="570.0" layoutY="560.0" onMouseClicked="#cancelComparison" styleClass="cancel-text" text="CANCELAR" />
+        <Button fx:id="nextStepBtn" layoutX="783.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#nextStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-primary" text="AVANÇAR" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="22.0" />
+        <Button fx:id="previousStepBtn" layoutX="651.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#previousStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-secondary" text="VOLTAR" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="199.0" />
+        <Text fx:id="cancelBtn" layoutX="570.0" layoutY="560.0" onMouseClicked="#cancelComparison" styleClass="cancel-text" text="CANCELAR" AnchorPane.bottomAnchor="37.0" AnchorPane.rightAnchor="328.0" />
     </children>
 </AnchorPane>
