--- a/src/main/resources/fxml/comparisonScreens/SelectTablesScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/SelectTablesScreen.fxml
@@ -11,19 +11,26 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-container" stylesheets="@css/Main.css, @css/SelectTablesScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.SelectTablesScreenController">
+<AnchorPane prefWidth="1000.0" prefHeight="680.0" styleClass="main-container" stylesheets="@css/Main.css, @css/SelectTablesScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.SelectTablesScreenController">
     <children>
 
         <!-- Title text -->
-        <Text layoutX="207.0" layoutY="58.0" styleClass="title-text" text="selecione as tabelas a serem comparadas">
-            <font>
-                <Font size="30.0" />
-            </font>
-        </Text>
+        <HBox alignment="CENTER" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="23.0">
+            <children>
+                <Region HBox.hgrow="ALWAYS" />
+                <Text text="selecione as tabelas a serem comparadas" styleClass="title-text">
+                    <font>
+                        <Font size="30.0" />
+                    </font>
+                </Text>
+                <Region HBox.hgrow="ALWAYS" />
+            </children>
+        </HBox>
 
         <VBox alignment="TOP_CENTER" layoutX="-1.0" layoutY="89.0" prefHeight="438.0" prefWidth="960.0" spacing="10.0" AnchorPane.bottomAnchor="73.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="89.0">
             <padding>
@@ -42,22 +49,23 @@
                                 <CheckBox fx:id="selectAllCheckBox" prefHeight="35.0" prefWidth="24.0" />
 
                                 <Pane HBox.hgrow="ALWAYS" />
-      
+
                                 <ComboBox fx:id="filterTypeComboBox" prefHeight="20.0" prefWidth="144.0" />
-      
+
                                 <TextField fx:id="searchTextField" prefWidth="200.0" promptText="buscar tabela..." />
 
-                                <ToggleButton fx:id="filterToggleButton" onMouseClicked="#onFilterButtonClicked" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" />
+                                <ToggleButton fx:id="filterToggleButton" mnemonicParsing="false" onMouseClicked="#onFilterButtonClicked" prefHeight="25.0" prefWidth="25.0" />
 
                             </children>
                         </HBox>
                     </children>
                 </VBox>
-                <HBox fx:id="filtersHBox" prefHeight="59.0" prefWidth="663.0" spacing="10.0" visible="false" managed="false">
+                <HBox fx:id="filtersHBox" managed="false" spacing="10.0" visible="false">
                     <children>
-                          <CheckBox fx:id="showDiffRecordCountOnlyCheckBox" prefHeight="19.0" prefWidth="400.0" text="Apenas tabelas com número de registros diferentes entre as fontes" />
-                          <CheckBox fx:id="showOnlySchemaDiffersCheckBox" prefHeight="19.0" prefWidth="299.0" text="Apenas tabelas com diferenças nos schemas" />
-                          <CheckBox fx:id="showSelectedOnlyCheckBox" prefHeight="19.0" prefWidth="196.0" text="Apenas tabelas selecionadas" />
+                        <CheckBox fx:id="showDiffRecordCountOnlyCheckBox" prefHeight="19.0" text="Apenas tabelas com diferenças no número de registros" />
+                        <CheckBox fx:id="showOnlySchemaDiffersCheckBox" prefHeight="19.0" text="Apenas tabelas com diferenças nos schemas" />
+                        <Region HBox.hgrow="ALWAYS" />
+                        <CheckBox fx:id="showSelectedOnlyCheckBox" prefHeight="19.0" text="Apenas tabelas selecionadas" />
                     </children>
                 </HBox>
 
@@ -69,8 +77,8 @@
                 </ScrollPane>
             </children>
         </VBox>
-        <Button fx:id="nextStepBtn" layoutX="783.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#nextStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-primary" text="AVANÇAR" />
-        <Button fx:id="previousStepBtn" layoutX="651.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#previousStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-secondary" text="VOLTAR" />
-        <Text fx:id="cancelBtn" layoutX="570.0" layoutY="560.0" onMouseClicked="#cancelComparison" styleClass="cancel-text" text="CANCELAR" />
+        <Button fx:id="nextStepBtn" layoutX="783.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#nextStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-primary" text="AVANÇAR" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="22.0" />
+        <Button fx:id="previousStepBtn" layoutX="651.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#previousStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-secondary" text="VOLTAR" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="199.0" />
+        <Text fx:id="cancelBtn" layoutX="570.0" layoutY="560.0" onMouseClicked="#cancelComparison" styleClass="cancel-text" text="CANCELAR" AnchorPane.bottomAnchor="37.0" AnchorPane.rightAnchor="328.0" />
     </children>
 </AnchorPane>
