--- a/src/main/resources/fxml/comparisonScreens/SetFiltersScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/SetFiltersScreen.fxml
@@ -68,8 +68,8 @@
                 </ScrollPane>
             </children>
         </VBox>
-        <Button fx:id="nextStepBtn" layoutX="783.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#nextStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-primary" text="AVANÇAR" />
-        <Button fx:id="previousStepBtn" layoutX="651.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#previousStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-secondary" text="VOLTAR" />
-        <Text fx:id="cancelBtn" layoutX="570.0" layoutY="560.0" onMouseClicked="#cancelComparison" styleClass="cancel-text" text="CANCELAR" />
+        <Button fx:id="nextStepBtn" layoutX="783.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#nextStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-primary" text="AVANÇAR" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="22.0" />
+        <Button fx:id="previousStepBtn" layoutX="651.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#previousStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-secondary" text="VOLTAR" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="199.0" />
+        <Text fx:id="cancelBtn" layoutX="570.0" layoutY="560.0" onMouseClicked="#cancelComparison" styleClass="cancel-text" text="CANCELAR" AnchorPane.bottomAnchor="37.0" AnchorPane.rightAnchor="328.0" />
     </children>
 </AnchorPane>
