--- a/src/main/resources/fxml/comparisonScreens/TableComparisonResultScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/TableComparisonResultScreen.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
@@ -12,39 +12,52 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-container" stylesheets="@../comparisonScreens/css/Main.css, @../comparisonScreens/css/TableComparisonResult.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.TableComparisonResultScreenController">
+<AnchorPane prefHeight="600.0" prefWidth="960.0" styleClass="main-container" stylesheets="@../comparisonScreens/css/Main.css, @../comparisonScreens/css/TableComparisonResult.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.TableComparisonResultScreenController">
     <children>
-      <HBox layoutX="25.0" layoutY="20.0" prefHeight="25.0" prefWidth="200.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0">
-         <children>
-      
-              <Label fx:id="titleLabel" prefHeight="25.0" prefWidth="915.0" style="-fx-font-size: 16px; -fx-font-weight: bold;" text="table_name" />
-         </children>
-      </HBox>
-      <HBox layoutX="25.0" layoutY="80.0" prefHeight="25.0" prefWidth="750.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="80.0">
-         <children>
-            <ComboBox fx:id="columnsComboBox" prefHeight="25.0" prefWidth="127.0" />
-            <TextField fx:id="searchTextField" promptText="Pesquisar valor...">
-               <HBox.margin>
-                  <Insets left="10.0" />
-               </HBox.margin>
-            </TextField>
-            <Button fx:id="applyFilterButton" mnemonicParsing="false" onAction="#applyFilter" prefHeight="25.0" prefWidth="29.0">
-               <HBox.margin>
-                  <Insets left="5.0" />
-               </HBox.margin>
-            </Button>
-            <Region HBox.hgrow="ALWAYS" />
-            <MenuButton fx:id="visibleColumnsMenuButton" mnemonicParsing="false" text="Colunas Visíveis" />
-         </children>
-      </HBox>
 
-        <TableView fx:id="differencesTableView" layoutX="25.0" layoutY="91.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="120.0" VBox.vgrow="ALWAYS" />
-
-        <HBox layoutX="25.0" layoutY="550.0" spacing="10" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0">
-            <Button onAction="#onCopyQueryButtonClicked" text="Copiar query" />
-            <Button onAction="#onExportCsvButtonClicked" text="Exportar CSV" />
-            <Region HBox.hgrow="ALWAYS" />
-            <Button onAction="#onCloseButtonClicked" text="Fechar" />
+        <!-- Title -->
+        <HBox alignment="CENTER_LEFT" AnchorPane.leftAnchor="20" AnchorPane.topAnchor="20">
+            <Label fx:id="titleLabel" styleClass="title-text" text="table_name" />
         </HBox>
+      <HBox prefHeight="100.0" prefWidth="200.0" />
+      <VBox prefHeight="200.0" prefWidth="100.0" />
+
+                    <!-- Filters -->
+        <!-- Filters -->
+        <HBox alignment="BASELINE_CENTER" spacing="10" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="80">
+            <VBox prefHeight="33.0" prefWidth="546.0" spacing="10">
+                <children>
+                    <HBox alignment="CENTER_LEFT" spacing="10">
+                        <children>
+                            <ComboBox fx:id="columnsComboBox" promptText="Coluna" />
+                            <TextField fx:id="searchTextField" promptText="Pesquisar por..." HBox.hgrow="ALWAYS" />
+                            <Button fx:id="applyFilterButton" onAction="#applyFilter" styleClass="btn-secondary, btn-secondary-gray" text="Pesquisar" />
+                        </children>
+                    </HBox>
+               <HBox alignment="CENTER_LEFT" spacing="10">
+                  <children>
+                     <CheckBox fx:id="showExclusiveRecordsCheckBox" onAction="#applyFilter" selected="true" mnemonicParsing="false" text="Mostrar registros exclusivos de uma fonte" />
+                     <CheckBox fx:id="showDivergingRecordsCheckBox" onAction="#applyFilter" selected="true" mnemonicParsing="false" text="Mostrar registros com diferença" />
+                  </children>
+               </HBox>
+                </children>
+            </VBox>
+
+                        <Region HBox.hgrow="ALWAYS" />
+
+                        <MenuButton fx:id="visibleColumnsMenuButton" styleClass="btn-secondary" text="Colunas Visíveis" />
+        </HBox>
+
+                       <!-- Table -->
+        <TableView fx:id="differencesTableView" layoutY="148.0" prefHeight="372.0" prefWidth="920.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="150.0" />
+
+        <!-- Footer buttons -->
+        <HBox alignment="CENTER_RIGHT" spacing="10" AnchorPane.bottomAnchor="20" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20">
+            <Button onAction="#onCopyQueryButtonClicked" styleClass="btn-primary" text="Copiar query" />
+            <Button onAction="#onExportCsvButtonClicked" styleClass="btn-primary" text="Exportar CSV" />
+            <Region HBox.hgrow="ALWAYS" />
+            <Button onAction="#onCloseButtonClicked" styleClass="btn-secondary" text="Fechar" />
+        </HBox>
+
     </children>
 </AnchorPane>
