--- a/src/main/resources/fxml/comparisonScreens/TableComparisonResultScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/TableComparisonResultScreen.fxml
@@ -31,7 +31,7 @@
                         <children>
                             <ComboBox fx:id="columnsComboBox" promptText="Coluna" />
                             <TextField fx:id="searchTextField" promptText="Pesquisar por..." HBox.hgrow="ALWAYS" />
-                            <Button fx:id="applyFilterButton" onAction="#applyFilter" styleClass="btn-secondary, btn-secondary-gray" text="Pesquisar" />
+                            <Button fx:id="applyFilterButton" onAction="#applyFilter" styleClass="btn-action" text="Pesquisar" />
                         </children>
                     </HBox>
                <HBox alignment="CENTER_LEFT" spacing="10">
